fix projects title spacing

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -735,7 +735,7 @@ nav {
 }
 
 #projectstitle {
-	min-width: 80%;
+	width: 70%;
 }
 
 #projectstitle::after {
